injiweb-1642 added constant
Signed-off-by: Gurpreet41082 <gurpreet.kaur@thoughtworks.com>